[CHORE] add values

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="sopt_orange">#FA9977</color>
+    <color name="sopt_pink">#FA79B0</color>
 </resources>
