--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,9 +23,9 @@
         android:id="@+id/iv_profile"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
+        android:layout_marginTop="30dp"
         android:src="@mipmap/ic_launcher"
-        android:layout_marginTop="50dp"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@id/tv_logo"
         app:layout_constraintStart_toStartOf="@id/tv_logo"
         app:layout_constraintTop_toBottomOf="@+id/tv_logo" />
@@ -34,69 +34,95 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/name"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/iv_profile"
         app:layout_constraintStart_toStartOf="@id/iv_profile"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintTop_toBottomOf="@id/iv_profile" />
 
     <TextView
         android:id="@+id/tv_name_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_name"
-        app:layout_constraintStart_toEndOf="@id/tv_name"
+        android:layout_marginStart="28dp"
         android:text="@string/kang"
-        android:layout_marginStart="28dp"/>
+        app:layout_constraintStart_toEndOf="@id/tv_name"
+        app:layout_constraintTop_toTopOf="@id/tv_name" />
 
     <TextView
         android:id="@+id/tv_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/age"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
         app:layout_constraintStart_toStartOf="@id/tv_name"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
     <TextView
         android:id="@+id/tv_age_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_age"
-        app:layout_constraintStart_toEndOf="@id/tv_age"
+        android:layout_marginStart="28dp"
         android:text="@string/age23"
-        android:layout_marginStart="28dp"/>
+        app:layout_constraintStart_toEndOf="@id/tv_age"
+        app:layout_constraintTop_toTopOf="@id/tv_age" />
 
     <TextView
         android:id="@+id/tv_mbti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/mbti"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/tv_age"
         app:layout_constraintStart_toStartOf="@id/tv_age"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_age" />
 
     <TextView
         android:id="@+id/tv_mbti_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/tv_mbti"
-        app:layout_constraintStart_toEndOf="@id/tv_mbti"
+        android:layout_marginStart="20dp"
         android:text="@string/intp"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintStart_toEndOf="@id/tv_mbti"
+        app:layout_constraintTop_toTopOf="@id/tv_mbti" />
 
     <TextView
         android:id="@+id/tv_story"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_mbti"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="10dp"
         android:text="@string/my_story"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_mbti" />
 
+    <Button
+        android:id="@+id/btn_follower"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/sopt_pink"
+        android:text="@string/follower"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_story" />
 
+    <Button
+        android:id="@+id/btn_repo"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:backgroundTint="@color/sopt_orange"
+        android:text="@string/repository"
+        app:layout_constraintStart_toEndOf="@+id/btn_follower"
+        app:layout_constraintTop_toTopOf="@id/btn_follower" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/container_rec"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_follower" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
