--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,52 +13,43 @@
         tools:context=".ui.view.SignInActivity">
 
         <TextView
-            android:id="@+id/tv_logo"
+            android:id="@+id/tv_sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="@string/sopt_hub"
-            android:textColor="@color/sopt_orange"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="56dp"
+            android:text="@string/sign_up"
+            android:textColor="@color/sopt_black"
+            android:textSize="25sp"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            android:layout_marginStart="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/login"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/tv_logo"
-            app:layout_constraintStart_toStartOf="@id/tv_logo"
-            app:layout_constraintTop_toBottomOf="@id/tv_logo" />
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="55dp"
             android:text="@string/name"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@id/et_id"
-            app:layout_constraintTop_toBottomOf="@id/tv_login" />
+            android:textColor="@color/sopt_black"
+            android:textSize="14sp"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_sign_up" />
 
         <EditText
             android:id="@+id/et_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="40dp"
-            android:background="@drawable/rectangle_border_orange_3"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/selector_user_input"
             android:hint="@string/name_input"
-            android:padding="14dp"
+            android:paddingVertical="12dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:paddingStart="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_name"
             app:layout_constraintTop_toBottomOf="@id/tv_name" />
@@ -67,12 +58,12 @@
             android:id="@+id/tv_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="40dp"
-            android:text="@string/id"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="34dp"
+            android:text="@string/github_id"
+            android:textColor="@color/sopt_black"
+            android:textSize="14sp"
+            android:fontFamily="@font/noto_sans_kr_bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_name" />
 
@@ -80,11 +71,14 @@
             android:id="@+id/et_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="40dp"
-            android:background="@drawable/rectangle_border_orange_3"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/selector_user_input"
             android:hint="@string/id_input"
-            android:padding="14dp"
+            android:paddingVertical="13dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:paddingStart="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_id"
             app:layout_constraintTop_toBottomOf="@id/tv_id" />
@@ -93,11 +87,11 @@
             android:id="@+id/tv_pw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="34dp"
             android:text="@string/pw"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:textColor="@color/sopt_black"
+            android:textSize="14sp"
+            android:fontFamily="@font/noto_sans_kr_bold"
             app:layout_constraintStart_toStartOf="@id/et_id"
             app:layout_constraintTop_toBottomOf="@id/et_id" />
 
@@ -105,24 +99,31 @@
             android:id="@+id/et_pw"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="40dp"
-            android:background="@drawable/rectangle_border_orange_3"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/selector_user_input"
             android:hint="@string/pw_input"
             android:padding="14dp"
             android:inputType="textPassword"
+            android:paddingVertical="13dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/noto_sans_kr_regular"
+            android:paddingStart="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_pw"
             app:layout_constraintTop_toBottomOf="@id/tv_pw" />
 
-        <Button
-            android:id="@+id/btn_sign_up_finish"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_sign_up"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="60dp"
-            android:backgroundTint="@color/sopt_orange"
-            android:paddingVertical="14dp"
-            android:text="@string/sign_up_finish"
+            android:layout_marginBottom="74dp"
+            android:background="@drawable/rectangle_fill_pink_5"
+            android:paddingVertical="12dp"
+            android:text="@string/sign_up"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/noto_sans_kr_bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/et_pw"
             app:layout_constraintStart_toStartOf="@id/et_pw" />
