--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="imgUrl"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,7 +25,7 @@
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="147dp"
                 android:layout_marginTop="22dp"
-                android:src="@mipmap/ic_launcher"
+                app:circleImgUrl="@{imgUrl}"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -58,13 +60,13 @@
                 android:id="@+id/bar_intro"
                 android:layout_width="2dp"
                 android:layout_height="0dp"
-                android:background="@color/white"
-                android:layout_marginEnd="2dp"
                 android:layout_marginTop="3dp"
+                android:layout_marginEnd="2dp"
                 android:layout_marginBottom="2dp"
+                android:background="@color/white"
+                app:layout_constraintBottom_toBottomOf="@id/tv_introduce"
                 app:layout_constraintEnd_toStartOf="@id/tv_introduce"
-                app:layout_constraintTop_toTopOf="@id/tv_introduce"
-                app:layout_constraintBottom_toBottomOf="@id/tv_introduce"/>
+                app:layout_constraintTop_toTopOf="@id/tv_introduce" />
 
             <TextView
                 android:id="@+id/tv_introduce"
@@ -76,10 +78,20 @@
                 android:text="@string/short_intro"
                 android:textColor="@color/white"
                 android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_id"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_id" />
+
+            <ImageView
+                android:id="@+id/iv_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="7dp"
+                android:src="@drawable/ic_setting_white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -89,13 +101,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="11dp"
             android:layout_marginTop="11dp"
-            android:paddingVertical="13dp"
-            android:paddingHorizontal="45dp"
             android:background="@drawable/selector_home_list_btn"
-            android:text="@string/follower"
             android:fontFamily="@font/noto_sans_kr_regular"
+            android:paddingHorizontal="45dp"
+            android:paddingVertical="13dp"
+            android:text="@string/follower"
+            android:textColor="@color/selector_profile_btn"
             android:textSize="14sp"
-            android:textColor="@color/sopt_black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_profile" />
 
@@ -105,13 +117,13 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="13dp"
             android:background="@drawable/selector_home_list_btn"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:paddingVertical="13dp"
             android:paddingStart="34dp"
             android:paddingEnd="35dp"
             android:text="@string/repository"
-            android:fontFamily="@font/noto_sans_kr_regular"
+            android:textColor="@color/selector_profile_btn"
             android:textSize="14sp"
-            android:textColor="@color/sopt_black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/btn_follower" />
 
