--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -30,7 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="30dp"
-            android:src="@mipmap/ic_launcher"
+            app:circleImgUrl="@{userInfoData.imgUrl}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="@id/tv_logo"
             app:layout_constraintStart_toStartOf="@id/tv_logo"
