--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="dark_gray">#8f9090</color>
     <color name="line_gray">#dde2e5</color>
     <color name="deep_gray">#9b9b9b</color>
+    <color name="mild_gray">#b5b5b5</color>
 </resources>
