--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -28,12 +28,39 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/github_id"
             android:textColor="@color/sopt_black"
             android:textSize="14sp"
-            android:fontFamily="@font/noto_sans_kr_bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_logo" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_auto_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/tv_id"
+            app:layout_constraintEnd_toEndOf="@id/et_id">
+
+            <ImageView
+                android:id="@+id/iv_check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/selector_check_btn"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tv_auto_login" />
+
+            <TextView
+                android:id="@+id/tv_auto_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/auto_login"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/iv_check" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <EditText
             android:id="@+id/et_id"
@@ -42,11 +69,11 @@
             android:layout_marginTop="6dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/selector_user_input"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:hint="@string/id_input"
             android:paddingVertical="12dp"
-            android:textSize="14sp"
-            android:fontFamily="@font/noto_sans_kr_regular"
             android:paddingStart="16dp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_id"
             app:layout_constraintTop_toBottomOf="@id/tv_id" />
@@ -56,10 +83,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="34dp"
+            android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/pw"
             android:textColor="@color/sopt_black"
             android:textSize="14sp"
-            android:fontFamily="@font/noto_sans_kr_bold"
             app:layout_constraintStart_toStartOf="@id/et_id"
             app:layout_constraintTop_toBottomOf="@id/et_id" />
 
@@ -70,13 +97,13 @@
             android:layout_marginTop="6dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/selector_user_input"
-            android:hint="@string/pw_input"
-            android:padding="14dp"
-            android:inputType="textPassword"
-            android:paddingVertical="13dp"
-            android:textSize="14sp"
             android:fontFamily="@font/noto_sans_kr_regular"
+            android:hint="@string/pw_input"
+            android:inputType="textPassword"
+            android:padding="14dp"
+            android:paddingVertical="13dp"
             android:paddingStart="16dp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_pw"
             app:layout_constraintTop_toBottomOf="@id/tv_pw" />
@@ -86,12 +113,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:paddingVertical="12dp"
-            android:text="@string/login"
-            android:textSize="15sp"
-            android:textColor="@color/white"
             android:background="@drawable/rectangle_fill_pink_5"
             android:fontFamily="@font/noto_sans_kr_bold"
+            android:paddingVertical="12dp"
+            android:text="@string/login"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
             app:layout_constraintEnd_toEndOf="@id/et_pw"
             app:layout_constraintStart_toStartOf="@id/et_pw" />
@@ -101,9 +128,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="41dp"
+            android:fontFamily="@font/noto_sans_kr_regular"
             android:text="@string/sign_up"
             android:textSize="12sp"
-            android:fontFamily="@font/noto_sans_kr_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/btn_login"
             app:layout_constraintStart_toStartOf="@id/btn_login" />
