--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/tv_logo"
+            android:id="@+id/iv_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
@@ -29,9 +29,9 @@
             android:text="@string/github"
             android:textColor="@color/sopt_pink"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="@id/tv_logo"
-            app:layout_constraintStart_toStartOf="@id/tv_logo"
-            app:layout_constraintTop_toBottomOf="@id/tv_logo" />
+            app:layout_constraintEnd_toEndOf="@id/iv_logo"
+            app:layout_constraintStart_toStartOf="@id/iv_logo"
+            app:layout_constraintTop_toBottomOf="@id/iv_logo" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tl_follow"
